[project]
name = "homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.12.1",
    "groq>=1.5.0",
    "ipython>=9.15.0",
    "jupyter>=1.1.1",
    "langsmith[claude-agent-sdk]>=0.5.0",
    "openai>=2.45.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.13.0",
]
